--- a/bookMyShow24/src/main/resources/application.properties
+++ b/bookMyShow24/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=bookMyShow24
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/bookmyshowdb
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=Mysqlpass@89
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
